# rouletteburn

./: .eslintignore  .eslintrc.cjs  .gitignore  Cargo.toml  KNOWNISSUES.md  LICENSE  NetscriptDefinitions.d.ts  README.md  TODO.txt  bootstrap.js  eslint.config.mjs  filesync.json  notes.txt  obfuscator.config.json  package-lock.json  package.json  roulette_table.html  tsconfig.json  vite.config.js
bitburner/: .gitignore  style.css  timeburn.js
bitburner/farmers/: grow.js  hack.js  weaken.js
capabilities/: basic.js  bootstrap.js
hacks/: reactHackRevealed.d.ts
rust/: lib.rs  whrng.rs
src/: Capabilities.ts  Farm.ts  Global.d.ts  Network.ts  constants.ts  crack.ts  custom.d.ts  globals.d.ts  main.js  main.ts  n00dles.js  n00dles.ts  refreshNetwork.ts  staticRam.ts  utils.ts
src/capabilities/: Capabilities.ts
src/farmingAlgos/: basicHWGW.ts  metaFarming.ts  noodlesHGW.ts  prepSingle.ts  quickHack.ts  shotgunHWGW.ts  startingHWGW.ts
src/farmingUtils/: Farm.ts  spawn.ts
src/hacks/: reactHack.d.ts  reactHackHidden.d.ts  reactHackRevealed.ts
src/mains/: hack.d.ts  mainBasic.ts  mainGrow.ts  mainHack.ts  mainWeaken.ts
src/roulette/: RoulettePlaythrough.ts  WHRNG.ts  badRNG.ts
src/spawn/: spawnHack.ts
src/targettingAlgos/: fastestResults.ts  heuristics.ts  largestUnderThreeMinutes.ts  metaTargeting.ts  utils.ts
src/ui/: Example.jsx  Example.tsx
src/ui/RouletteHelper/: RouletteCell.tsx  RouletteHelper.tsx  RouletteTable.tsx
src/ui/RouletteHelper/css/: RouletteTable.css  RouletteTable.module.css
