[package]
name = "rouletteburn"
version = "1.0.0"
authors = ["Paul Dejean <paulcdejean@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "rust/lib.rs"

[dependencies]
js-sys = "0.3.63"
wasm-bindgen = "0.2.63"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
